src/main/java/org/gmart/codeGen/javaGen/fromYaml/modelExtraction/parserGeneration/generatedParser/DataTypeHierarchyParser.java
// Generated from C:\Users\marti\workingLowLevel\codeGen\src\main\java\org\gmart\codeGen\javaGen\fromYaml\modelExtraction\parserGeneration\DataTypeHierarchy.g4 by ANTLR 4.8
package org.gmart.codeGen.javaGen.fromYaml.modelExtraction.parserGeneration.generatedParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DataTypeHierarchyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, ArrayMarks=16, 
		WS=17, Identifier=18;
	public static final int
		RULE_typeNamePart = 0, RULE_propertyNamePart = 1, RULE_onOneLineTypeDef = 2, 
		RULE_identifierList = 3, RULE_mapTypeExpression = 4, RULE_typeExpression = 5, 
		RULE_anonymousEnumField = 6, RULE_diamondOneArg = 7, RULE_diamondTwoArg = 8, 
		RULE_qualifiedName = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"typeNamePart", "propertyNamePart", "onOneLineTypeDef", "identifierList", 
			"mapTypeExpression", "typeExpression", "anonymousEnumField", "diamondOneArg", 
			"diamondTwoArg", "qualifiedName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'is'", "'?'", "'oneOf'", "'('", "','", "')'", "'Dict'", "'['", 
			"']'", "'Map'", "'abstract'", "'enum'", "'<'", "'>'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "ArrayMarks", "WS", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DataTypeHierarchy.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DataTypeHierarchyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class TypeNamePartContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(DataTypeHierarchyParser.Identifier, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TypeNamePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeNamePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterTypeNamePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitTypeNamePart(this);
		}
	}

	public final TypeNamePartContext typeNamePart() throws RecognitionException {
		TypeNamePartContext _localctx = new TypeNamePartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_typeNamePart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			match(Identifier);
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(21);
				match(T__0);
				setState(22);
				qualifiedName();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyNamePartContext extends ParserRuleContext {
		public Token optionalMark;
		public TerminalNode Identifier() { return getToken(DataTypeHierarchyParser.Identifier, 0); }
		public PropertyNamePartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyNamePart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterPropertyNamePart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitPropertyNamePart(this);
		}
	}

	public final PropertyNamePartContext propertyNamePart() throws RecognitionException {
		PropertyNamePartContext _localctx = new PropertyNamePartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_propertyNamePart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			match(Identifier);
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(26);
				((PropertyNamePartContext)_localctx).optionalMark = match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OnOneLineTypeDefContext extends ParserRuleContext {
		public List<TypeExpressionContext> typeExpression() {
			return getRuleContexts(TypeExpressionContext.class);
		}
		public TypeExpressionContext typeExpression(int i) {
			return getRuleContext(TypeExpressionContext.class,i);
		}
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public OnOneLineTypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_onOneLineTypeDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterOnOneLineTypeDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitOnOneLineTypeDef(this);
		}
	}

	public final OnOneLineTypeDefContext onOneLineTypeDef() throws RecognitionException {
		OnOneLineTypeDefContext _localctx = new OnOneLineTypeDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_onOneLineTypeDef);
		int _la;
		try {
			setState(42);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__2:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				match(T__2);
				setState(30);
				match(T__3);
				setState(31);
				typeExpression();
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(32);
					match(T__4);
					setState(33);
					typeExpression();
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				match(T__5);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				identifierList();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DataTypeHierarchyParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DataTypeHierarchyParser.Identifier, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitIdentifierList(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(Identifier);
			setState(49);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(45);
				match(T__4);
				setState(46);
				match(Identifier);
				}
				}
				setState(51);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapTypeExpressionContext extends ParserRuleContext {
		public DiamondOneArgContext diamondOneArg() {
			return getRuleContext(DiamondOneArgContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(DataTypeHierarchyParser.Identifier, 0); }
		public TerminalNode ArrayMarks() { return getToken(DataTypeHierarchyParser.ArrayMarks, 0); }
		public DiamondTwoArgContext diamondTwoArg() {
			return getRuleContext(DiamondTwoArgContext.class,0);
		}
		public MapTypeExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mapTypeExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterMapTypeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitMapTypeExpression(this);
		}
	}

	public final MapTypeExpressionContext mapTypeExpression() throws RecognitionException {
		MapTypeExpressionContext _localctx = new MapTypeExpressionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mapTypeExpression);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__6);
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(53);
					match(T__7);
					setState(54);
					match(Identifier);
					setState(55);
					match(T__8);
					}
				}

				setState(58);
				diamondOneArg();
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ArrayMarks) {
					{
					setState(59);
					match(ArrayMarks);
					}
				}

				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 2);
				{
				setState(62);
				match(T__9);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__7) {
					{
					setState(63);
					match(T__7);
					setState(64);
					match(Identifier);
					setState(65);
					match(T__8);
					}
				}

				setState(68);
				diamondTwoArg();
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ArrayMarks) {
					{
					setState(69);
					match(ArrayMarks);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeExpressionContext extends ParserRuleContext {
		public Token abstractFieldMark;
		public AnonymousEnumFieldContext anonymousEnumField() {
			return getRuleContext(AnonymousEnumFieldContext.class,0);
		}
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public MapTypeExpressionContext mapTypeExpression() {
			return getRuleContext(MapTypeExpressionContext.class,0);
		}
		public TerminalNode ArrayMarks() { return getToken(DataTypeHierarchyParser.ArrayMarks, 0); }
		public TypeExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterTypeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitTypeExpression(this);
		}
	}

	public final TypeExpressionContext typeExpression() throws RecognitionException {
		TypeExpressionContext _localctx = new TypeExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeExpression);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				((TypeExpressionContext)_localctx).abstractFieldMark = match(T__10);
				setState(79);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__11:
					{
					setState(75);
					anonymousEnumField();
					}
					break;
				case T__4:
				case T__5:
				case T__13:
				case Identifier:
					{
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==Identifier) {
						{
						setState(76);
						qualifiedName();
						}
					}

					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				anonymousEnumField();
				}
				break;
			case T__6:
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				mapTypeExpression();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				qualifiedName();
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ArrayMarks) {
					{
					setState(84);
					match(ArrayMarks);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnonymousEnumFieldContext extends ParserRuleContext {
		public Token enumMark;
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public AnonymousEnumFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anonymousEnumField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterAnonymousEnumField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitAnonymousEnumField(this);
		}
	}

	public final AnonymousEnumFieldContext anonymousEnumField() throws RecognitionException {
		AnonymousEnumFieldContext _localctx = new AnonymousEnumFieldContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_anonymousEnumField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			((AnonymousEnumFieldContext)_localctx).enumMark = match(T__11);
			setState(90);
			match(T__3);
			setState(91);
			identifierList();
			setState(92);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DiamondOneArgContext extends ParserRuleContext {
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public DiamondOneArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diamondOneArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterDiamondOneArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitDiamondOneArg(this);
		}
	}

	public final DiamondOneArgContext diamondOneArg() throws RecognitionException {
		DiamondOneArgContext _localctx = new DiamondOneArgContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_diamondOneArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__12);
			setState(95);
			typeExpression();
			setState(96);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DiamondTwoArgContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public TypeExpressionContext typeExpression() {
			return getRuleContext(TypeExpressionContext.class,0);
		}
		public DiamondTwoArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_diamondTwoArg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterDiamondTwoArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitDiamondTwoArg(this);
		}
	}

	public final DiamondTwoArgContext diamondTwoArg() throws RecognitionException {
		DiamondTwoArgContext _localctx = new DiamondTwoArgContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_diamondTwoArg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__12);
			setState(99);
			qualifiedName();
			setState(100);
			match(T__4);
			setState(101);
			typeExpression();
			setState(102);
			match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public List<TerminalNode> Identifier() { return getTokens(DataTypeHierarchyParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(DataTypeHierarchyParser.Identifier, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DataTypeHierarchyListener ) ((DataTypeHierarchyListener)listener).exitQualifiedName(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_qualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(Identifier);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(105);
				match(T__14);
				setState(106);
				match(Identifier);
				}
				}
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}